[package]
name = "ai_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm = { git = "https://github.com/rustformers/llm.git", features = ["cublas"]}
pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
rand = "0.8.5"
rodio = "0.17.3"
